--- a/fonts/search.html
+++ b/fonts/search.html
@@ -31,7 +31,7 @@
 							return $1.toUpperCase();
 						});
 						
-						f.fontname = f.path.replace('fonts/', '').replace('/stylesheet.css', '').replace('-', '');
+						f.fontname = f.path.replace('fonts/', '').replace('/stylesheet.css', '').replace(/-/gi, '');
 						
 						$scope.files.push(f);
 					}
