--- a/start.html
+++ b/start.html
@@ -39,7 +39,7 @@
 	<script src="https://cdn.rawgit.com/agenciadecricao/assets/master/app.js"></script>
 	
 	<style>
-	.site-width {width:1024px; margin:0 auto;}
+	.site-width {max-width:1024px; margin:0 auto;}
 	</style>
 	
 </head>
