--- a/jquery-redactor/example.html
+++ b/jquery-redactor/example.html
@@ -23,8 +23,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 	
 	<!-- Redactor -->
-	<link rel="stylesheet" href="redactor.10.1.2.css">
-	<script src="redactor.10.1.2.js"></script>
+	<link rel="stylesheet" href="https://cdn.rawgit.com/agenciadecricao/assets/master/jquery-redactor/redactor.10.1.2.css">
+	<script src="https://cdn.rawgit.com/agenciadecricao/assets/master/jquery-redactor/redactor.10.1.2.js"></script>
 	<script>
 	$(function() {
 		$(".redactor").redactor();
