--- a/agencia/search.html
+++ b/agencia/search.html
@@ -2,18 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Pesquisa de fontes</title>
+	<title>Pesquisa de logo</title>
 	
 	<!-- JQuery -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/flatly/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+
+
+	<!-- Assets -->
+	<link rel="stylesheet" href="https://cdn.rawgit.com/agenciadecricao/assets/033fd1ce7455ce5664275e81758fd2a1e8593faa/app.css">
+	<script src="https://rawgit.com/agenciadecricao/assets/master/app.js"></script>
+
 	
 	<!-- AngularJS -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.min.js"></script>
@@ -26,7 +31,7 @@
 			$http.get('https://api.github.com/repos/agenciadecricao/assets/git/trees/'+ json[0].object.sha +'?recursive=1').success(function(files) {
 				for(var i in files.tree) {
 					f = files.tree[i];
-					if (f.path.indexOf("stylesheet.css")>-1) {
+					if (f.path.indexOf(".png")>-1) {
 						f.name = f.path.replace('fonts/', '').replace('/stylesheet.css', '').replace('-', ' ').replace(/^([a-z\u00E0-\u00FC])|\s+([a-z\u00E0-\u00FC])/g, function($1) {
 							return $1.toUpperCase();
 						});
@@ -47,6 +52,12 @@
 		}
 		
 		
+		$scope.show = {};
+		$scope.showOpen = function(data) {
+			$scope.show = data;
+			$("#teste").fadeIn(200);
+		};
+		
 	});
 	</script>
 	<style>
@@ -57,20 +68,38 @@
 <body ng-app="App" ng-controller="AppController">
 	
 	<br>
-	<div class="site-width">
+	<div class="site-width" style="background:#eee; padding:20px;">
 	
 		<div class="input-group col-xs-6">
 			<input type="text" class="form-control" placeholder="Pesquisar" ng-model="q">
 			<div class="input-group-addon"><i class="fa fa-search"></i></div>
 		</div>
 		
-		<hr>
-	
-<textarea wrap="off" class="form-control" rows="4" style="background:#eee; margin:0 0 10px 0; font:12px courier; wit" onclick="$(this).select();" ng-repeat="f in files | filter:filterFiles">
-&lt;!-- {{f.name}} --&gt;
-&lt;link rel="stylesheet" href="{{f.cdn_rawgit}}" &gt;
-&lt;style&gt;.font-{{f.fontname}} {font-family: {{f.fontname}};}&lt;/style&gt;
-</textarea>
+		<br>
+		
+		<div>
+			<div style="display:inline-block; margin:0 10px 10px 0;" ng-repeat="f in files|filter : filterFiles" ng-click="showOpen(f);">
+				<img ng-src="{{f.cdn_rawgit}}" alt="">
+			</div>
+		</div>
+		
+		<pre>{{files|json}}</pre>
+		
+		<div ng-if="show.path != undefined">
+			<div class="popup popup-show" id="teste">
+				<div class="popup-content">
+					<div class="panel panel-primary" style="width:400px;">
+						<div class="panel-heading">{{show.path}}</div>
+						<div class="panel-body">
+							<img ng-src="{{show.cdn_rawgit}}" alt=""><br>
+							<input type="text" value="{{show.cdn_rawgit}}" class="form-control" onclick="$(this).select();">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<a href="#" data-popup="#teste">teste</a>
 
 	</div>
 </body>
