--- a/fonts/search.html
+++ b/fonts/search.html
@@ -15,6 +15,8 @@
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 	
+	<link rel="stylesheet" href="style.css" id="csstest">
+	
 	<!-- AngularJS -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.min.js"></script>
 	<script>
@@ -46,7 +48,24 @@
 			return obj.name.toLowerCase().indexOf( $scope.q.toLowerCase() )>-1 ? true : false;
 		}
 		
-		
+		$scope.test = function(f, $event) {
+			$("#csstest").remove();
+			$( $event.target ).parent().css('opacity', .5);
+			
+			// Css call
+			var css = document.createElement('link');
+			css.setAttribute('rel', 'stylesheet');
+			css.setAttribute('type', 'text/css');
+			css.setAttribute('href', f.cdn_rawgit);
+			document.getElementsByTagName('head')[0].appendChild(css);
+			css.onload = function() {
+				$("*").css({"font-family":f.fontname});
+				$( $event.target ).parent().css('opacity', 1);
+			};
+			css.onerror = function() {
+				alert('Algo deu errado');
+			};
+		};
 	});
 	</script>
 	<style>
@@ -65,12 +84,17 @@
 		</div>
 		
 		<hr>
-	
-<textarea wrap="off" class="form-control" rows="4" style="background:#eee; margin:0 0 10px 0; font:12px courier; wit" onclick="$(this).select();" ng-repeat="f in files | filter:filterFiles">
-&lt;!-- {{f.name}} --&gt;
-&lt;link rel="stylesheet" href="{{f.cdn_rawgit}}" &gt;
-&lt;style&gt;.font-{{f.fontname}} {font-family: {{f.fontname}};}&lt;/style&gt;
-</textarea>
+		
+		
+		<div ng-repeat="f in files | filter:filterFiles">
+			<a href="javascript:;" class="btn btn-xs" ng-click="test(f, $event);">Testar</a>
+			<div style="overflow:auto; white-space:nowrap; background:#f5f5f5; padding:10px;">
+				&lt;!-- {{f.name}} --&gt; <br>
+				&lt;link rel="stylesheet" href="{{f.cdn_rawgit}}" &gt; <br>
+				&lt;style&gt;.font-{{f.fontname}} {font-family: {{f.fontname}};}&lt;/style&gt;
+			</div>
+			<br>
+		</div>
 
 	</div>
 </body>
